# clify

./: .clinerules  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/clify/: __init__.py  cli.py  formatter.py  generator.py  handler.py  parser.py  request.py
tests/: conftest.py  test_cli.py  test_formatter.py  test_generator.py  test_handler.py  test_parser.py  test_request.py
